@@ -13,3 +13,4 @@ tmp.c
 bk_funi
 runsize
 bk_trunc
+bkrelay
